<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:padding="25dp"
    android:scrollbars="none"
    android:fadeScrollbars="false"
    tools:context=".SignupScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!-- Header -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/header_background_signup"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:importantForAccessibility="yes">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/sign_up"
            android:contentDescription="@string/logo_description"
            android:layout_marginEnd="12dp" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:importantForAccessibility="yes" />

    </LinearLayout>

    <!-- Content Form -->
    <LinearLayout
        android:id="@+id/form"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


            <!-- Name Input Field -->
            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/enter_name"
                android:inputType="textPersonName"
                android:padding="14dp"
                android:background="@drawable/edittext_background"
                android:importantForAccessibility="yes" />

            <!-- Phone Number Field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp">

                <EditText
                    android:id="@+id/editTextCountryCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_background"
                    android:gravity="center"
                    android:importantForAccessibility="yes"
                    android:padding="12dp"
                    android:text="+91"
                    android:textColor="@color/black" />

                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:phoneNumber="true"
                    android:hint="@string/enter_phone"
                    android:inputType="phone"
                    android:padding="14dp"
                    android:background="@drawable/edittext_background"
                    android:importantForAccessibility="yes" />

            </LinearLayout>

            <!-- Gender Label -->
            <TextView
                android:id="@+id/gender_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/gender"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:importantForAccessibility="yes" />

            <!-- Gender Selection -->
            <RadioGroup
                android:id="@+id/rg_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/rb_other"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:text="@string/other" />

            </RadioGroup>

            <!-- Date of Birth Field -->
            <EditText
                android:id="@+id/et_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/enter_dob"
                android:inputType="date"
                android:padding="14dp"
                android:background="@drawable/edittext_background"
                android:importantForAccessibility="yes" />

            <!-- Class Input Field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp">

                <!-- Class Input Field -->
                <EditText
                    android:id="@+id/et_class"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/enter_class"
                    android:inputType="text"
                    android:padding="14dp"
                    android:background="@drawable/edittext_background"
                    android:importantForAccessibility="yes" />

                <!-- Section Input Field -->
                <EditText
                    android:id="@+id/et_section"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:hint="@string/enter_section"
                    android:inputType="text"
                    android:padding="14dp"
                    android:background="@drawable/edittext_background"
                    android:importantForAccessibility="yes" />
                <EditText
                    android:id="@+id/et_roll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="10dp"
                    android:hint="@string/enter_roll"
                    android:inputType="text"
                    android:padding="14dp"
                    android:background="@drawable/edittext_background"
                    android:importantForAccessibility="yes" />

            </LinearLayout>

            <!-- Email Input Field -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="12dp">

                <EditText
                    android:id="@+id/et_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/enter_email"
                    android:inputType="textEmailAddress"
                    android:padding="14dp"
                    android:background="@drawable/edittext_background"
                    android:importantForAccessibility="yes" />



            </LinearLayout>

            <!-- Password Input Field -->
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="14dp"
                android:background="@drawable/edittext_background"
                android:importantForAccessibility="yes" />

            <!-- Confirm Password Input Field -->
            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="14dp"
                android:background="@drawable/edittext_background"
                android:importantForAccessibility="yes" />

            <!-- Profile Picture Upload Button -->

            <Button
                android:id="@+id/btn_upload_picture"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/button_background_signup"
                android:text="@string/upload_picture"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold"
                android:elevation="2dp"
                android:importantForAccessibility="yes" />

            <!-- Profile Picture Display -->
            <ImageView
                android:id="@+id/iv_profile_picture"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="12dp"
                android:contentDescription="@string/profile_picture"
                android:scaleType="centerCrop"
                android:importantForAccessibility="yes"
                android:background="@drawable/edittext_background"
                android:visibility="gone"/>

            <!-- Terms and Conditions Checkbox -->
            <CheckBox
                android:id="@+id/cb_terms"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginBottom="12dp"
                android:text="@string/accept_terms"
                android:importantForAccessibility="yes" />

            <!-- Sign Up Button -->
            <Button
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:background="@drawable/button_background_signup"
                android:padding="14dp"
                android:text="@string/sign_up"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                android:textStyle="bold"
                android:elevation="2dp"
                android:importantForAccessibility="yes" />

            <!-- Progress Bar -->
            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:importantForAccessibility="no" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


